--- a/src/css-components/Projects.css
+++ b/src/css-components/Projects.css
@@ -1,6 +1,6 @@
 .projects {
     width: 100%;
-    height: auto;
+    height: 120px;
     display: flex;
     justify-content: center;
     align-items: center;
