Quality of Life edits - Edited views for ipad and iphone - edited issues with footer and Navbar - cleaned up About me Section

--- a/src/css-components/ProjectDisplay.css
+++ b/src/css-components/ProjectDisplay.css
@@ -14,7 +14,8 @@
     text-align: center;
   }
   .project img {
-    width: 700px;
+    max-width: 600px;
+    max-height: 400px;
     border-radius: 10px;
   }
   
