--- a/src/css-components/Home.css
+++ b/src/css-components/Home.css
@@ -4,6 +4,7 @@
     justify-content: center;
     font-family: "Avenir", sans-serif;
     color: #1a255a;
+    padding-top: 100px;
   }
   
   .about {
@@ -31,6 +32,12 @@
     font-size: 30px;
   }
 
+  .about .prompt p {
+    margin-bottom: 0;
+    padding-bottom: 100;
+    margin-top: 0;
+  }
+
   .prompt svg {
     font-family: "Avenir", sans-serif;
     font-size: 45px;
@@ -53,6 +60,7 @@
     align-items: center;
     justify-content: center;
     color: #1a255a;
+    margin-top: 40px
   }
 
   .socialButtons button {
@@ -104,42 +112,94 @@
 
   .aboutCont {
     font-family: "Avenir", sans-serif;
-    font-size: 35px;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    padding: 40px 20px;
     color: #1a255a;
   }
-
+  
   .aboutCont h1 {
-    margin-top: 60px;
-    margin-bottom: 20px;
+    font-size: 50px;
+    text-align: center;
+    margin-bottom: 40px;
   }
-
+  
   .bio {
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
+    gap: 40px;
   }
-
-.bio img, .bio p {
-    flex-grow: 0;
-    margin-top: 50px;
-}
-
-  .bio img {
-    width: 600px;
+  
+  .bio-image {
+    flex: 0 1 500px; /* Increased from 400px to 500px */
+  }
+  
+  .bio-image img {
+    width: 100%;
+    max-width: 500px; /* Increased from 400px to 500px */
+    height: auto;
     border-radius: 10px;
-    margin-right: 60px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
-
-  .bio p {
-    font-size: 30px;
-    margin-right: 10px;
-    text-align: center;
-    width: 40%;
+  
+  .bio-text {
+    flex: 1 1 400px;
+    max-width: 600px;
+  }
+  
+  .bio-text ul {
+    list-style-type: none;
+    padding-left: 0;
+  }
+  
+  .bio-text li {
+    font-size: 20px;
+    line-height: 1.6;
+    margin-bottom: 15px;
+    padding-left: 30px;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><circle fill="%231a255a" cx="8" cy="8" r="4"/></svg>');
+    background-repeat: no-repeat;
+    background-position: left center;
+    background-size: 16px;
+  }
+  
+  @media only screen and (max-width: 1024px) {
+    .bio {
+      flex-direction: column;
+    }
+  
+    .bio-image, .bio-text {
+      flex: 1 1 100%;
+    }
+  
+    .bio-image img {
+      max-width: 400px; /* Adjust for smaller screens */
+    }
+  }
+  
+  @media only screen and (max-width: 768px) {
+    .aboutCont h1 {
+      font-size: 28px;
+    }
+  
+    .bio-text li {
+      font-size: 18px;
+    }
+  }
+  
+  @media only screen and (max-width: 480px) {
+    .aboutCont h1 {
+      font-size: 24px;
+    }
+  
+    .bio-text li {
+      font-size: 16px;
+    }
+  
+    .bio-image img {
+      max-width: 100%; /* Full width on very small screens */
+    }
   }
   
   @media only screen and (max-width: 600px) {
