--- a/src/css-components/Navbar.css
+++ b/src/css-components/Navbar.css
@@ -1,91 +1,99 @@
 .navbar {
-    width: 100%;
-    height: 100px;
-    background: #1a255a;
-  }
-  
-  .links {
-    font-family: "Avenir", sans-serif;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-  }
-  
+  width: 100%;
+  height: 100px;
+  background: #1a255a;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
+.links {
+  font-family: "Avenir", sans-serif;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+.navbar a {
+  color: white;
+  text-decoration: none;
+  margin: 20px;
+  font-size: 30px;
+}
+
+.toggleButton {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.toggleButton svg {
+  font-size: 50px;
+}
+
+.toggleButton button {
+  margin-right: 20px;
+  background-color: transparent;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+.navbar.open {
+  height: 100vh;
+}
+
+.navbar.open .links {
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-top: 100px;
+}
+
+.navbar.open a {
+  width: 100%;
+  text-align: center;
+}
+
+@media only screen and (max-width: 900px) {
   .navbar a {
-    color: white;
-    text-decoration: none;
-    margin: 20px;
-    font-size: 30px;
-    align-items: center;
-    justify-content: center;
+    font-size: 24px;
   }
-  
+}
+
+@media only screen and (max-width: 600px) {
   .toggleButton {
-    width: 100%;
-    height: 100px;
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
   }
   
-  .toggleButton svg {
-    font-size: 50px;
-  }
-  .toggleButton button {
-    margin-right: 20px;
-    background-color: transparent;
-    border: none;
-    color: white;
-    cursor: pointer;
+  .navbar.closed .links {
+    display: none;
   }
   
-  #open {
+  .navbar.open {
     height: 100vh;
   }
   
-  #open .links {
-    flex-direction: column;
-    justify-content: flex-start;
-    margin-top: 100px;
+  .navbar.open .links {
+    display: flex;
+  }
+}
+
+@media only screen and (min-width: 601px) {
+  .toggleButton {
+    display: none;
   }
   
-  #open a {
-    width: 100%;
-    text-align: center;
+  .navbar {
+    height: 100px;
   }
   
-  @media only screen and (max-width: 900px) {
-    .navbar a {
-      width: 70px;
-    }
+  .links {
+    flex-direction: row;
   }
-  
-  @media only screen and (max-width: 600px) {
-    .toggleButton {
-      display: flex;
-    }
-    #close a {
-      display: none;
-    }
-  }
-  
-  @media only screen and (min-width: 600px) {
-    .toggleButton {
-      display: none;
-    }
-  
-    .hiddenLinks {
-      display: none;
-    }
-  
-    #open {
-      height: 100px;
-    }
-  
-    #open .links {
-      flex-direction: row;
-    }
-  }
+}
