--- a/src/css-components/Projects.css
+++ b/src/css-components/Projects.css
@@ -5,6 +5,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding-top: 100px;
+    margin-bottom: 150px;
   }
   .projects .projectTitle {
     text-align: center;
